# grin-gui

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yaml  ci.yaml
.hooks/: pre-commit
crates/core/: Cargo.toml
crates/core/src/: backup.rs  error.rs  lib.rs  logger.rs  network.rs  utility.rs
crates/core/src/config/: mod.rs  wallet.rs  wow.rs
crates/core/src/fs/: backup.rs  mod.rs  save.rs  theme.rs
crates/core/src/node/: mod.rs  subscriber.rs
crates/core/src/style/: header.rs  table_row.rs
crates/core/src/theme/: application.rs  button.rs  card.rs  checkbox.rs  container.rs  header.rs  mod.rs  modal.rs  picklist.rs  radio.rs  renderer.rs  scrollable.rs  table_header.rs  table_row.rs  text.rs  text_editor.rs  text_input.rs
crates/core/src/wallet/: mod.rs
crates/core/src/widget/: header.rs  table_row.rs
crates/core/src/widget/header/: state.rs
crates/core/src/widgets/: mod.rs
crates/core/src/widgets/renderer/: header.rs  table_row.rs
crates/core/src/widgets/style/: header.rs  table_row.rs
crates/core/src/widgets/widget/: header.rs  table_row.rs
crates/core/src/widgets/widget/header/: state.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: lib.rs  renderer.rs  widget.rs
crates/widgets/src/renderer/: header.rs  table_row.rs
crates/widgets/src/style/: header.rs  table_row.rs
crates/widgets/src/widget/: header.rs  table_row.rs
crates/widgets/src/widget/header/: state.rs
data/: grin_btc.json  grin_usd.json
locale/: de.json  en.json
resources/linux/: grin-gui.desktop
resources/osx/GrinGUI.app/Contents/: Info.plist
resources/windows/: res.rc
src/: cli.rs  localization.rs  logger.rs  main.rs  process.rs
src/gui/: mod.rs  node_sub.rs  style.rs  time.rs  update.rs
src/gui/element/: about.rs  exit.rs  menu.rs  mod.rs  modal.rs
src/gui/element/node/: mod.rs
src/gui/element/node/embedded/: mod.rs  summary.rs
src/gui/element/settings/: general.rs  mod.rs  node.rs  wallet.rs
src/gui/element/setup/: init.rs  mod.rs  wallet.rs  wallet_success.rs
src/gui/element/wallet/: mod.rs
src/gui/element/wallet/operation/: action_menu.rs  apply_tx.rs  apply_tx_confirm.rs  apply_tx_success.rs  chart.rs  create_tx.rs  create_tx_contracts.rs  create_tx_success.rs  home.rs  mod.rs  open.rs  show_slatepack.rs  tx_detail.rs  tx_done.rs  tx_list.rs  tx_list_display.rs  tx_proof.rs
src/gui/element/wallet/setup/: init.rs  mod.rs  wallet_import.rs  wallet_import_success.rs  wallet_list.rs  wallet_restore.rs  wallet_setup.rs  wallet_success.rs
src/tray/: autostart.rs  mod.rs
wix/: main.wxs
