[package]
name = "grin-core-gui"
version = "0.1.0"
edition = "2021"

[features]
default = ["opengl"]
wgpu = ["ajour-widgets/wgpu", "iced/wgpu", "iced/default_system_font"]
opengl = ["ajour-widgets/opengl", "iced/glow", "iced/glow_default_system_font"]
no-self-update = ["ajour-core/no-self-update"]
debug = ["iced/debug"]

[dependencies]
ajour-core = { version = "1.3.3", path = "crates/core", features=['gui'] }
ajour-widgets = { version = "1.3.2", path = "crates/widgets" }

iced = { version = "0.4.0", default-features = false }
iced_futures = { version = "0.4.1", features = ["async-std"] }
iced_native = { version = "0.5.1" }
async-std = "1.6.2"
isahc = { version = "0.9.6", features = ["json"] }
image = "0.23.8"
opener = "0.4.1"
chrono = { version = "0.4", features = ['serde'] }
log = "0.4"
fern = "0.6"
timeago = "0.2.1"
isolang = "1.0.0"
log-panics = { version = "2.0", features=['with-backtrace'] }
structopt = "0.3"
num-format = "0.4.0"
futures = "0.3"
version-compare = "0.0.11"
open = "1"
anyhow = "1.0"
fuzzy-matcher = "0.3.7"
json-gettext = "3.2.8"
strfmt = "0.1.6"
once_cell = "1.6.0"
serde = { version = "1.0", features=['derive'] }
serde_json = "1.0"
uuid = { version = "1.1", features=['v4'] }

[target.'cfg(target_os =  "linux")'.dependencies]
native-dialog = "0.5.5"

[target.'cfg(not(target_os =  "linux"))'.dependencies]
rfd = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[build-dependencies]
embed-resource = "1.3.3"

[workspace]
members = [
    ".",
    "crates/core",
    "crates/widgets"
]