[package]
name = "grin-gui"
version = "0.1.0-alpha.7"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "GUI wrapping grin and grin-wallet. Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-gui"
keywords = [ "crypto", "grin", "mimblewimble" ]
readme = "README.md"
edition = "2021"

[features]
default = ["wgpu"]
wgpu = [ "iced_renderer/wgpu" ]
no-self-update = ["grin-gui-core/no-self-update"]
debug = ["iced/debug"]

[dependencies]
grin-gui-core = { version = "0.1.0-alpha.6", path = "crates/core", features = ["wgpu"]}

iced = { version = "0.12", features = ["canvas", "tokio"]  }
iced_futures = { version = "0.12", features = ["async-std"] }
iced_style = {version = "0.12"}
iced_renderer = { version = "0.12" }
iced_core = { version = "0.12" }
#iced_aw = { path = "../iced_aw", default-features = false, features = ["card", "modal", "table"]}
iced_aw = { git = "https://github.com/yeastplume/iced_aw.git", branch = "table_widget", default-features = false, features = ["card", "modal", "table"]}

plotters-iced = "0.10.0"
plotters="0.3"
plotters-backend = "0.3"
rand = "0.8.3"

async-std = "1.6.2"
isahc = { version = "0.9.6", features = ["json"] }
image = "0.23.8"
opener = "0.4.1"
chrono = { version = "0.4.11", features = ["serde"] }
log = "0.4"
timeago = "0.2.1"
isolang = "1.0.0"
log-panics = { version = "2.0", features=['with-backtrace'] }
structopt = "0.3"
num-format = "0.4.0"
futures = "0.3"
version-compare = "0.0.11"
open = "1"
anyhow = "1.0"
fuzzy-matcher = "0.3.7"
json-gettext = "3.2.8"
strfmt = "0.1.6"
once_cell = "1.6.0"
lazy_static = "1"
serde = { version = "1.0", features=['derive'] }
serde_json = "1.0.59"
reqwest = { version = "0.11", features = ["json", "blocking"] }
uuid = "0.8.2"


[target.'cfg(target_os =  "linux")'.dependencies]
native-dialog = "0.5.5"

[target.'cfg(not(target_os =  "linux"))'.dependencies]
native-dialog = "0.6.3"
rfd = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[build-dependencies]
embed-resource = "1.3.3"

[workspace]
members = [
    ".",
    "crates/core",
]