[package]
name = "grin-gui-core"
description = "Core GUI library for Grin GUI"
version = "0.1.0"
authors = ["Yeastplume", "Casper Rogild Storm"]
license = "GPL-3.0"
homepage = "https://github.com/mimblewimble/grin-gui"
repository = "https://github.com/mimblewimble/grin-gui"
edition = "2018"
build = "src/build/build.rs"

[features]
default = ["gui"]
gui = ['default']
no-self-update = []
wgpu = ["iced_wgpu"]
#opengl = ["iced_core"]

[build-dependencies]
built = { version = "0.4", features = ["git2"] }

[dependencies]

############ Release ################
### Node
grin_config = { git = "https://github.com/mimblewimble/grin", tag = "v5.2.0-beta.3" }
grin_core = { git = "https://github.com/mimblewimble/grin", tag = "v5.2.0-beta.3" }
grin_util = { git = "https://github.com/mimblewimble/grin", tag = "v5.2.0-beta.3" }
grin_servers = { git = "https://github.com/mimblewimble/grin", tag = "v5.2.0-beta.3" }
grin_keychain = { git = "https://github.com/mimblewimble/grin", tag = "v5.2.0-beta.3" }
grin_chain = { git = "https://github.com/mimblewimble/grin", tag = "v5.2.0-beta.3" }

### Wallet
grin_wallet = { git = "https://github.com/mimblewimble/grin-wallet", branch = "contracts" }
grin_wallet_config = { git = "https://github.com/mimblewimble/grin-wallet", branch = "contracts" }
grin_wallet_util = { git = "https://github.com/mimblewimble/grin-wallet", branch = "contracts" }
grin_wallet_controller = { git = "https://github.com/mimblewimble/grin-wallet", branch = "contracts" }
grin_wallet_api = { git = "https://github.com/mimblewimble/grin-wallet", branch = "contracts" }
grin_wallet_impls = { git = "https://github.com/mimblewimble/grin-wallet", branch = "contracts" }
grin_wallet_libwallet = { git = "https://github.com/mimblewimble/grin-wallet", branch = "contracts" }
grin-gui-widgets = { path = "../widgets" }


############ Local testing ################
### Node
# grin_config = { path = "../../../grin/config" }
# grin_core = { path = "../../../grin/core" }
# grin_util = { path = "../../../grin/util" }
# grin_servers = { path = "../../../grin/servers" }
# grin_keychain = { path = "../../../grin/keychain" }
# grin_chain = { path = "../../../grin/chain" }

### Wallet
#grin_wallet = { path = "../../../grin-wallet"}
#grin_wallet_config = { path = "../../../grin-wallet/config"}
#grin_wallet_util = { path = "../../../grin-wallet/util"}
#grin_wallet_controller = { path = "../../../grin-wallet/controller"}
#grin_wallet_api = { path = "../../../grin-wallet/api"}
#grin_wallet_impls = { path = "../../../grin-wallet/impls"}
#grin_wallet_libwallet = { path = "../../../grin-wallet/libwallet"}

regex = "1.4.3"
fancy-regex = "0.5.0" # Regex with backtracking
async-std = { version = "1.9.0", features = ["unstable"] }
dirs-next = "2.0.0"
serde = { version = "1.0.123", features = ['derive'] }
serde_yaml = "0.8.17"
serde_json = "1.0.62"
serde_urlencoded = "0.7"
isahc = { version = "1.1.0", features = ["json"] }
zip = "0.5.10"
glob = "0.3.0"
once_cell = "1.6.0"
chrono = { version = "0.4", features = ['serde'] }
log = "0.4"
walkdir = "2.3"
retry = "1.2"
thiserror = "1.0"
path-slash = "0.1.4"
tar = "0.4.33"
zstd = { version = "0.6.1", features = ["zstdmt"] }
num_cpus = "1.13.0"
dirs = "2.0"
futures = "0.3"
parking_lot = "0.10"
log4rs = { version = "0.12", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
backtrace = "0.3"
lazy_static = "1"

iced = { version = "0.10", features = ["advanced", "tokio"] }
iced_futures = { version = "0.7", features = ["async-std"] }
iced_core = { version = "0.10" }
iced_style = "0.9"
iced_graphics = { version = "0.9" }
#iced_native = { version = "0.10", optional = true }
iced_aw = { version = "0.6", default-features = false, features = ["card", "modal"]}
iced_wgpu = { version = "0.11", optional = true }
#iced_glow = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
flate2 = "1.0"
tar = "0.4"
