[package]
name = "grin-gui-widgets"
description = "Widget library for Grin Core GUI"
version = "0.1.0"
authors = ["Yeastplume", "Casper Rogild Storm", "tarkah <admin@tarkah.dev>"]
license = "GPL-3.0"
homepage = "https://github.com/mimblewimble/grin-gui"
repository = "https://github.com/mimblewimble/grin-gui"
edition = "2018"

[features]
default = ["opengl"]
wgpu = ["iced_wgpu"]
opengl = ["iced_glow"]

[dependencies]
iced_native = { version = "0.5.1" }
iced_graphics = { version = "0.3.0" }
iced_core = { version = "0.5.0" }

iced_wgpu = { version = "0.5.1", optional = true }
iced_glow = { version = "0.3.0", optional = true }
