[package]
name = "grin-gui-widgets"
description = "Widget library for Grin Core GUI"
version = "0.1.0-alpha.1"
authors = ["Yeastplume", "Casper Rogild Storm", "tarkah <admin@tarkah.dev>"]
license = "GPL-3.0"
homepage = "https://github.com/mimblewimble/grin-gui"
repository = "https://github.com/mimblewimble/grin-gui"
edition = "2018"

[features]
default = ["wgpu"]
wgpu = ["iced_wgpu"]
#opengl = ["iced_glow"]

[dependencies]
iced = { version = "0.10", features = ["advanced", "lazy", "tokio"] }
iced_graphics = { version = "0.9" }
iced_core = { version = "0.10" }
iced_wgpu = { version = "0.11", optional = true }
iced_style = "0.9"
